# simple-bookmark

./: LICENSE  README.md  babel.config.js  next.config.js  package-lock.json  package.json  requirements.txt
backend/: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat
backend/src/backend/: __init__.py
backend/tests/: test_api.py
src/: App.tsx  index.tsx  store.ts
src/Container/: BookmarkView.test.tsx  BookmarkView.tsx  HomeContainer.tsx
src/Container/__snapshots__/: BookmarkView.test.tsx.snap
src/app/: App.css  App.tsx  page.tsx
src/model/: bookmark.tsx
src/store/: hooks.ts  managerSlice.tsx  store.tsx
tests/: BookmarkView.test.tsx  sum.test.ts
tests/__snapshots__/: BookmarkView.test.tsx.snap
